--- a/client/src/components/mainPage/shopPage.css
+++ b/client/src/components/mainPage/shopPage.css
@@ -29,7 +29,7 @@ body {
     right: 0;
     width: 50%;
     height: 100%;
-    background: linear-gradient(45deg, #e7d107 0%, transparent 100%);
+    background: linear-gradient(45deg, #1a1a1a 0%, transparent 100%);
     opacity: 0.05;
 }
 
